# usbd-class-tester

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish-release.yml
src/: bus.rs  lib.rs  usbdata.rs
tests/: test_device.rs  test_helper_example.rs
tests/helper_example/: mod.rs
tests/test_device1/: mod.rs
