[package]
name = "usbd-class-tester"
version = "0.3.0"
edition = "2021"

description = "Library for testing usb-device device classes."
authors = ["Vitalii Bursov <vitaly@bursov.com>"]
readme = "README.md"
license = "MIT"
keywords = ["usb-device", "embedded", "testing"]
repository = "https://github.com/vitalyvb/usbd-class-tester"
exclude = [
    ".github",
]

[features]
default = ["initlog"]
initlog = ["dep:env_logger"]

[dependencies.usb-device]
version = "0.3.2"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.11"
optional = true
